<resources>

    <string name="api_key">AIzaSyA_dNwJ_Atw6j3B-BtFyzGINBs-jNM7flE</string>

    <string name="app_name">DQ evaluation</string>
    <string name="blk_lst">Blacklisted Apps</string>
    <string name="pDan">Potentially Dangerous Apps</string>
    <string name="unknSrc">Unknown Sources</string>
    <string name="appPerm">App Permissions</string>
    <string name="osver">API Version</string>
    <string name="patch">Security Patch Age</string>
    <string name="devModel">Device Model Age</string>
    <string name="bootldr">Bootloader Lock</string>
    <string name="root">Root Access</string>
    <string name="devMn">Developer Menu</string>
    <string name="devLock">Device Lock</string>
    <string name="trend">Historical Trend</string>
    <string name="cmprsn">Same Device Comparison</string>
    <string name="accr">Correctness</string>
    <string name="mindelay">Minimum Delay</string>
    <string name="sensresol">Resolution</string>
    <string name="maxrange">Max Range</string>
    <string name="consist">Consistency</string>
    <string name="noise">Noise</string>
    <string name="timeRes">Time Resolution</string>
    <string name="freshness">Freshness</string>
    <string name="dq">Data Quality Score</string>
    <string name="calc">CALCULATE</string>
    <string name="btnNoise">Measure Noise</string>
    <string name="title_activity_noise">NoiseActivity</string>
    <string name="btnSave">Save</string>
    <string name="btnCancel">Cancel</string>
    <string name="btnStart">Start</string>
    <string name="rbX">Axis X</string>
    <string name="rbY">Axis Y</string>
    <string name="rbZ">Axis Z</string>
    <string name="rbAll">All axes Z</string>
    <string name="swUse">Use it</string>
    <string name="tvAccel">Accelerometer Sensor</string>
    <string name="tvGyro">Gyroscope Sensor</string>

</resources>
